--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <a href="#" class="text-light me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Find A
                         Location</a>
                     <a href="#" class="text-light me-4"><i
-                            class="fas fa-phone-alt text-primary me-2"></i>+01234567890</a>
+                            class="fas fa-phone-alt text-primary me-2"></i>+012-34567890</a>
                     <a href="#" class="text-light me-0"><i
                             class="fas fa-envelope text-primary me-2"></i>Example@gmail.com</a>
                 </div>
